--- a/hw3/src/elinarawat_hw3.ipynb
+++ b/hw3/src/elinarawat_hw3.ipynb
@@ -304,7 +304,7 @@
     "    \n",
     "    best_model = max(scores_dict, key=lambda x: scores_dict[x])\n",
     "\n",
-    "    for model in scores_dict:\n",
+    "    for model in full_scores_dict:\n",
     "        if full_scores_dict[model][0] > best_roc_auc:\n",
     "            best_roc_auc = full_scores_dict[model][0]\n",
     "        if full_scores_dict[model][1] > best_f1:\n",
